; ModuleID = '/home/carl/AnghaBench/linux/drivers/hsi/clients/extr_cmt_speech.c_cs_release_cmd.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/hsi/clients/extr_cmt_speech.c_cs_release_cmd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hsi_msg = type { i32, %struct.cs_hsi_iface* }
%struct.cs_hsi_iface = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.hsi_msg*)* @cs_release_cmd to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cs_release_cmd(%struct.hsi_msg* %0) #0 {
  %2 = alloca %struct.hsi_msg*, align 8
  %3 = alloca %struct.cs_hsi_iface*, align 8
  store %struct.hsi_msg* %0, %struct.hsi_msg** %2, align 8
  %4 = load %struct.hsi_msg*, %struct.hsi_msg** %2, align 8
  %5 = getelementptr inbounds %struct.hsi_msg, %struct.hsi_msg* %4, i32 0, i32 1
  %6 = load %struct.cs_hsi_iface*, %struct.cs_hsi_iface** %5, align 8
  store %struct.cs_hsi_iface* %6, %struct.cs_hsi_iface** %3, align 8
  %7 = load %struct.hsi_msg*, %struct.hsi_msg** %2, align 8
  %8 = getelementptr inbounds %struct.hsi_msg, %struct.hsi_msg* %7, i32 0, i32 0
  %9 = load %struct.cs_hsi_iface*, %struct.cs_hsi_iface** %3, align 8
  %10 = getelementptr inbounds %struct.cs_hsi_iface, %struct.cs_hsi_iface* %9, i32 0, i32 0
  %11 = call i32 @list_add_tail(i32* %8, i32* %10)
  ret void
}

declare dso_local i32 @list_add_tail(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
